@@ -9,7 +9,7 @@
   "updateUrl": "",
   "authorList": ["cybetcat5555", "its_meow (hiotewdew)"],
   "credits": "Cybercat5555: Design, Modeling, Texturing, Ideas; its_meow: Programming",
-  "logoFile": "",
+  "logoFile": "betteranimalsplus.png",
   "screenshots": [],
   "dependencies": []
 }
